Closed Bug 813190 Opened 12 years ago Closed 12 years ago

MediaStreamGraphImpl hangs onto last displayed frame until GC

Categories

(Core :: Audio/Video, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla20
blocking-basecamp +
Tracking Status
firefox18 --- fixed
firefox19 --- fixed
firefox20 --- fixed

People

(Reporter: mikeh, Assigned: mikeh)

References

Details

Attachments

(1 file, 1 obsolete file)

This is a new bug to address the MediaStreamGraphImpl component of bug 809259.

In short: the Gonk camera has 9 buffers, and every stopped instance of a DOMMediaStream holds onto one of these buffers until the GC mops them up.  If the GC doesn't happen quickly enough, we can run out of buffers.
roc, this patch got left hanging in the review in bug 809259.  There are more changes necessary to fix that issue, but this will be an important part of it that I'd like to address separately while I work on the rest.
Attachment #683162 - Flags: review?(roc)
blocking-basecamp: --- → ?
Comment on attachment 683162 [details] [diff] [review]
MediaStreamGraphImpl no longer indefinitely keeps the last-played video frame

This is OK but you should probably also add to MediaStreamGraphImpl::PlayVideo to not cache the last played frame in mLastPlayedVideoFrame if mNotifiedFinished is true.
Attachment #683162 - Flags: review?(roc) → review+
(In reply to Robert O'Callahan (:roc) (Mozilla Corporation) from comment #2)
> Comment on attachment 683162 [details] [diff] [review]
> MediaStreamGraphImpl no longer indefinitely keeps the last-played video frame
> 
> This is OK but you should probably also add to
> MediaStreamGraphImpl::PlayVideo to not cache the last played frame in
> mLastPlayedVideoFrame if mNotifiedFinished is true.

Now that you mention it, this change does look a little thin.  I wonder where the rest went.
This is the correct and complete patch.  Sorry about that last one.
Attachment #683162 - Attachment is obsolete: true
Attachment #683585 - Flags: review?(roc)
blocking-basecamp: ? → +
https://hg.mozilla.org/mozilla-central/rev/f912278fcd61
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Whiteboard: needs-checkin-aurora
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: