Bug 813190 - Stop media streams from hanging onto the last played media frame indefinitely. r=roc, a=blocking-basecamp